2007-01-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SchedulerUI.js: fixed a bug where the
	calendar view would not be updated properly.

2007-01-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-newStartDate]): fix the handling of the component start date
	depending on the "hm" and the "day" parameters.

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-roleOfUser:uidinContext:context]): set role of current user to
	"Assistant" if the object that is accessed is "freebusy.ifb".

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -lookupCalendarFolderForUID:uid]): method
	moved from UI/Scheduler/UIxCalView:calendarFolderForUID:.
	([SOGoAppointmentFolder
	-lookupCalendarFoldersForUIDs:_uidsinContext:]): now use the new
	lookupCalendarFolderForUID: method, which doesn't do security
	checks.

2007-01-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxAclEditor.m ([UIxAclEditor -assistantsValue]): new
	accessor that returns the comma-separated list of users with role
	"Assistant".
	([UIxAclEditor -delegatesValue]): same as above for "Delegate".
	([UIxAclEditor -_prepareUsers]): there is no longer a concept of
	"checkedUsers". Instead, each user is either classified in the
	list of assistants or the list of delegates.

2006-12-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailMainFrame.m ([UIxMailMainFrame
	-composeAction]): method imported from removed container modules.
	([UIxMailMainFrame -mailFolderName]): method imported from removed
	container modules.

	* UI/MailerUI/UIxMailPopupView.m: a new special popup component
	for wrapping UIxMailView with the "popupview" action.

	* UI/MailerUI/UIxMailAccountView.m: renamed to UIxMailSplashView,
	since its the component that displays the same splash screen than
	the one in Thunderbird/Icedove.

	* UI/MailerUI/UIxMailAccountViewContainer.[hm],